# autonomous-cart

./: .gitignore  CMakeLists.txt  requirements.txt
models/: yolov8n_int8.onnx
python/: detection_algorithms.py  quantize_model.py  test_detection.py  test_square_detection.py  visualize_radar.py  yolo_setup.py
python/finetune/: test.py
src/camera/: camera_handler.cpp  camera_handler.hpp  detection.hpp  test_libs.cpp  test_onnx.cpp  test_yolo.cpp
src/camera/tests/: CMakeLists.txt  test_camera_handler.cpp
src/radar/: radar_handler.cpp  radar_handler.hpp
src/radar/tests/: CMakeLists.txt  test_radar.cpp  test_radar_handler.cpp
